# advent-of-fpga-2025

./: LICENSE  README.md
.github/: install_opam.sh
.github/workflows/: run_tests.yaml
fpga/: .gitignore  Makefile  place.tcl  route.tcl  synth.tcl
lib/hardcaml_aof/: dune  fifo.ml  math.ml  procedure.ml
lib/hardcaml_aof_test/: dune  simulation.ml  uart.ml
src/day01/: day01.ml  day01_arty.ml  dune
src/day02/: day02.ml  day02_arty.ml  day02_old.ml  dune
src/day03/: day03.ml  day03_arty.ml  dune
src/day04/: day04.ml  day04_arty.ml  dune
src/day05/: day05.ml  day05_arty.ml  dune
src/day06/: day06.ml  day06_arty.ml  day06_new.ml  day06_old.ml  dune
src/day07/: day07.ml  day07_arty.ml  dune
src/day08/: day08.ml  day08_arty.ml  dune
src/day09/: day09.ml  day09_arty.ml  dune
src/day11/: day11.ml  day11_arty.ml  dune
src/old/day01/: dune
src/old/day02/: dune
src/old/day04/: day04.ml  dune
src/old/day06/: day06.ml  dune
src/old/day07/: dune
src/old/day09/: dune
test/day01/: .gitignore  dune  ref.py  test_day01.ml  test_uart_sum.ml
test/day02/: dune  input.txt  ref.py  test_day02.ml  test_day02_new.ml  test_day02_old.ml
test/day03/: dune  ref.py  test_day03.ml
test/day04/: dune  ref.py  test_day04.ml
test/day05/: dune  ref.py  test_day05.ml
test/day06/: dune  input.txt  ref.py  test_day06.ml
test/day07/: dune  ref.py  test_day07.ml
test/day08/: dune  input.txt  ref.py  test_day08.ml
test/day09/: dune  input.txt  ref.py  test_day09.ml
test/day11/: dune  ref.py  test_day11.ml  toy_input.txt
test/old/day01/: dune  test_day01.ml
test/old/day02/: dune  test_day02.ml
test/old/day04/: dune  test_day04.ml
test/old/day06/: dune  input.txt  test_day06.ml
test/old/day07/: dune  ref.py  test_day07.ml
test/old/day09/: dune  ref.py  test_day09.ml
